# Solcial-Agent

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json
.devcontainer/: devcontainer.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  daily-activity-report.lock.yml  daily-activity-report.md
anchor/: Anchor.toml  Cargo.toml
anchor/idl/: social_network.json
anchor/programs/social_network/: Cargo.toml
anchor/programs/social_network/src/: errors.rs  lib.rs
anchor/programs/social_network/src/instructions/: create_post.rs  create_profile.rs  like_post.rs  mod.rs
anchor/programs/social_network/src/state/: mod.rs  post.rs  profile.rs
app/: globals.css  layout.tsx  page.tsx
app/actions/: feed.ts
app/dashboard/: layout.tsx
app/dashboard/feed/: page.tsx
docs/: ARCHITECTURE.md  MVP.md  PRD.md  ROADMAP.md  TECH_STACK.md  TODO.md
solder/: config.ts  schema.ts
solder/indexers/: index.ts  like-added.ts  post-created.ts
src/components/atoms/: WalletConnectButton.tsx
src/components/molecules/: CreatePostForm.tsx  PostCard.tsx
src/components/organisms/: FeedList.tsx
src/components/templates/: WalletProvider.tsx
src/db/: index.ts
src/db/queries/: get-notifications.ts  get-profile-by-wallet.ts  get-recent-posts.ts  index.ts
src/db/schema/: agent-memory.ts  index.ts  notifications.ts  posts.ts  profiles.ts
src/lib/: constants.ts
src/lib/anchor/: index.ts  program.ts
src/lib/solana/: connection.ts  index.ts
src/lib/utils/: format.ts  (+1 more)
