[package]
name = "social-network"
version = "0.1.0"
description = "OnchainSocial AI - Solana smart contract for onchain social network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "social_network"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
