[package]
name = "social-network"
version = "0.1.0"
description = "OnchainSocial AI - Solana smart contract for onchain social network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "social_network"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
bytemuck = "=1.25.0"       # versi sebelum edition2024
bytemuck_derive = "=1.10.2"
blake3 = "=1.5.3"
